--- a/лр2/ЛР2_Паюнен_12.ipynb
+++ b/лр2/ЛР2_Паюнен_12.ipynb
@@ -650,16 +650,26 @@
         "- SellingPrice и kmdriven: Коэффициент корреляции составляет примерно -0.19. Это указывает на слабую отрицательную линейную зависимость между ценой продажи и пробегом. С увеличением пробега цена продажи имеет тенденцию немного снижаться.\n",
         "- Year и kmdriven: Коэффициент корреляции составляет примерно -0.42. Это указывает на умеренную отрицательную линейную зависимость между годом выпуска и пробегом. Более старые автомобили, как правило, имеют больший пробег.\n",
         "\n",
-        "Ковариация:\n",
-        "Из матрицы ковариации видно следующее:\n",
-        "- Ковариация между SellingPrice и Year положительна (примерно 1.01e+06), что соответствует положительной корреляции и указывает на то, что с увеличением года выпуска цена продажи в среднем увеличивается.\n",
-        "- Ковариация между SellingPrice и kmdriven отрицательна (примерно -5.18e+09), что соответствует отрицательной корреляции и указывает на то, что с увеличением пробега цена продажи в среднем снижается.\n",
-        "- Ковариация между Year и kmdriven отрицательна (примерно -8.25e+04), что соответствует отрицательной корреляции и указывает на то, что более старые автомобили в среднем имеют больший пробег.\n",
+        "\n",
+        "Мы не можем сделать однозначные выводы по тепловой карте, потому что сырая ковариация зависит от масштаба и единиц измерения:\n",
+        " - year - годы (разброс десятки → дисперсия ~ 18)\n",
+        " - kmdriven - километры (разброс десятки/сотни тысяч → дисперсия ~ 2.26e9)\n",
+        " - SellingPrice - деньги (разброс сотни тысяч/миллионы → дисперсия ~ 2.59e11)\n",
         "\n",
         "Выводы:\n",
         "- Между SellingPrice и year существует умеренная положительная линейная зависимость.\n",
         "- Между SellingPrice и kmdriven существует слабая отрицательная линейная зависимость.\n",
         "- Между year и kmdriven существует умеренная отрицательная линейная зависимость."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Задания по варианту 12\n",
+        "### Задание 1\n",
+        "Использовать seaborn. По группировке - fuel и количество машин\n",
+        "каждого типа продавца (seller_type) построить диаграмму следующего вида:"
       ]
     },
     {
@@ -701,6 +711,11 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "565fafe4"
       },
@@ -711,6 +726,16 @@
         " - Дизельные автомобили занимают второе место по популярности среди всех типов продавцов.\n",
         " - Газовые автомобили наименее распространены среди всех типов продавцов.\n",
         " - На диаграмме видно, что структура предлагаемых автомобилей по типу топлива различается в зависимости от типа продавца, что может быть важным фактором при анализе рынка или прогнозировании цен."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Задание 2\n",
+        "Использовать pandas и plot. По сводной таблице (pivot_table) -\n",
+        "отобразить максимальную стоимость по типу владельца (owner). Оставить только\n",
+        "маркеры в виде ∎ зелёного цвета размером 14"
       ]
     },
     {
@@ -848,6 +873,16 @@
         " - Автомобили от первых владельцев имеют наибольший потенциал для высокой цены продажи.\n",
         "\n",
         "Этот график демонстрирует, как история владения автомобилем связана с его максимальной рыночной стоимостью."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Задание 3\n",
+        "Использовать matplotlib. Отфильтровать данные - год больше 2005\n",
+        "Построить круговую диаграмму, которая отображает процент машин по годам\n",
+        "(year)."
       ]
     },
     {
